Bug 538217 - Give the test results box at the bottom left overflow:auto so that all test results can be accessed.

--- a/style.css
+++ b/style.css
@@ -352,9 +352,14 @@ a.addNote {
 }
 
 .testResults {
-  margin: 8px 10em 0 0;
-  height: 7em;
+  margin: 0;
+  position: absolute;
+  top: 2.7em;
+  bottom: 0;
+  left: 0;
+  right: 10em;
   overflow: hidden;
+  overflow-x: auto;
   -moz-column-width: 18em;
 }
 
